Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Training_Module__c/Training_Module__c.object-meta.xml
<CustomObject>
    <description>Stores phishing-related modules (e.g., “Email Spoofing,” “Link Safety”).</description>
    <label>Training Module</label>
    <nameField>
        <label>Training Module Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>