Salesforce-Phishing-Awareness-Training-Tracker/force-app/main/default/objects/Training_Module__c/fields/Module_Name__c.field-meta.xml
<CustomField>
    <fullName>Module_Name__c</fullName>
    <label>Module Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>